tests/type-check/bad/tuple-wrong-types.arr
fun f(t :: { String; Boolean }):
   t
end

f({true; 3})
